--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h2>Datos</h2>
 
-    <div>
+    <div id="datos">
         <h3>Presión barometrica</h3>
         <P id="presionBarometrica">0</P>
         <h3>Temperatura ambiente</h3>
@@ -21,6 +21,17 @@
         <h3>Humedad relativa</h3>
         <P id="humedadRelativa"></P>
     </div>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id qui possimus, quis provident accusamus quibusdam ex, distinctio aspernatur, dolorum ad repellendus? Omnis possimus earum non vitae voluptates magnam! Eos?
+    </p>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id qui possimus, quis provident accusamus quibusdam ex, distinctio aspernatur, dolorum ad repellendus?
+    </p>
+
+    <footer id="footer">
+        <p>por Matías Mongua</p>
+    </footer>
 
     <script src="app.js"></script>
 
